# copaw-local

./: .gitignore  README.md  constraints.txt  pyproject.toml  requirements.txt
copaw/: constant.py
copaw/agents/: __init__.py  prompt.py  react_agent.py  skills_manager.py  utils.py
copaw/agents/memory/: memory_manager.py
copaw/agents/tools/: send_file.py  shell.py
copaw/app/: _app.py
copaw/app/channels/: base.py  console.py  dingtalk.py  discord_.py  feishu.py  imessage.py  manager.py  qq.py  schema.py  utils.py
copaw/app/routers/: __init__.py  agent.py  config.py  providers.py  skills.py  workspace.py
copaw/app/runner/: api.py  runner.py
copaw/cli/: app_cmd.py  channels_cmd.py  chats_cmd.py  http.py  init_cmd.py  main.py  providers_cmd.py
copaw/config/: __init__.py  config.py  watcher.py
copaw/console/: index.html
copaw/console/assets/: _baseUniq-B46XIgaD.js  arc-DzYZqVOu.js  architectureDiagram-VXUJARFQ-Cy4gNNrA.js  blockDiagram-VD42YOAC-DB-4qR-Q.js  c4Diagram-YG6GDRKO-VJ59VCtd.js  channel-t6v7RXWb.js  chunk-4BX2VUAB-RITH07vx.js  chunk-55IACEB6-BbArSg_e.js  chunk-B4BG7PRW-nVb3ln4g.js  chunk-DI55MBZ5-CswJH06k.js  clone-CQR6x-uD.js  (+36 more)
copaw/providers/: __init__.py  models.py  providers.json  registry.py  store.py
copaw/utils/: logging.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/scripts/: deploy-to-console.mjs
frontend/src/: main.tsx
tools/frontend_recovery/: README.md  check_coverage_regression.js  check_module_syntax.js  rebuild_phase2_modules.js  recover_frontend.js  snapshot_baseline.js
(+47 files in other folders)
