[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copaw"
version = "0.0.1"
description = "CoPaw local editable fork from installed package"
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
  "agentscope==1.0.16.dev0",
  "agentscope-runtime==1.1.0b2",
  "discord-py>=2.3",
  "dingtalk-stream>=0.24.3",
  "uvicorn>=0.40.0",
  "apscheduler>=3.11.2",
  "playwright>=1.49.0",
  "questionary>=2.1.1",
  "mss>=9.0.0",
  "reme-ai==0.3.0.0a9",
  "transformers>=4.30.0",
  "python-dotenv>=1.0.0",
  "onnxruntime<1.24",
  "lark-oapi>=1.5.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23.0",
  "pre-commit>=4.2.0",
  "pytest-cov>=6.2.1",
]

[project.scripts]
copaw = "copaw.cli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["copaw*"]

[tool.setuptools.package-data]
copaw = [
  "**/*.md",
  "**/*.txt",
  "**/*.json",
  "**/*.yaml",
  "**/*.yml",
  "**/*.toml",
  "**/*.html",
  "**/*.css",
  "**/*.js",
  "**/*.svg",
  "**/*.png",
  "**/*.jpg",
  "**/*.jpeg",
  "**/*.gif",
  "**/*.ico",
  "**/*.woff",
  "**/*.woff2",
  "**/*.ttf",
  "**/*.map",
]
